--- a/app.wxss
+++ b/app.wxss
@@ -44,3 +44,157 @@
   height: 0;
   color: transparent;
 }
+/* 车辆列表 */
+.hotcarsContent .ul .li {
+  padding: 1em;
+  border-bottom: 1px solid #eee;
+}
+.hotcarsContent .ul .li .img image{
+  width: 10em;
+  height: 10em;
+  display: block;
+}
+.hotcarsContent .ul .li .img{
+  position: relative;
+  overflow: hidden;
+}
+.hotcarsContent .ul .li .text,.hotcarsContent .ul .li .img{
+  display: inline-block;
+  vertical-align: middle;
+}
+.hotcarsContent .ul .li .text{
+  padding: 1em;
+  width: 50%;
+}
+.hotcarsContent .ul .li .text .h3,.listCon .ul .li .text .h3{
+  font-size: 0.85em;
+  /* font-weight: bold; */
+  /* text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap; */
+}
+.hotcarsContent .ul .li .text .data{
+  font-size: 0.75em;
+  color: #999;
+  margin-bottom: 1em;
+}
+.hotcarsContent .ul .li .text .price .del{
+  text-decoration:line-through;
+  color: #999;
+  font-size: 0.75em;
+}
+.hotcarsContent .ul .li .text .carprice{
+  display: block;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: rgb(255, 102, 0);
+}
+
+/* 品牌选择 */
+.maskLayer{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 55;
+}
+.choose{
+  background-color: #fff;
+  position: fixed;
+  top:auto;
+  bottom: 0;
+  width: 100%;
+  height: 85vh;
+  border-radius: 0.5em 0.5em 0 0;
+  z-index: 66;
+}
+
+.chooseContent{
+  overflow-y:scroll ;
+  height: 90%
+}
+
+.chooseTit{
+  text-align: center;
+  padding: 0.75em 0;
+  background-color: #76919c20;
+}
+
+.hotbrand{
+  padding: 0 1em;
+}
+
+.brandtitle{
+  font-size:0.9em ;
+  padding: 0.75em 0;
+}
+.hotbrandCon .ul .li{
+  text-align: center;
+  width: 19%;
+  display: inline-block;
+  margin-bottom:1em;
+}
+.hotbrandCon .ul .li .ico image{
+  width: 2.3em;
+  height: 2.3em;
+}
+.hotbrandCon .ul .li .text{
+  font-size: 0.8em;
+  color: rgb(95, 95, 95);
+}
+
+.allbrand .title{
+  background-color: #76919c20;
+  padding: 0.3em 1em;
+  color: #76919c86;
+  font-size:0.8em ;
+}
+
+.brandCon .ul .li{
+  padding: 0.75em 1em;
+  font-size:0.85em ;
+}
+.brandCon .ul .li:hover{
+  background-color: #76919c12;
+}
+.brandCon .ul .li{
+  border-bottom: 1px solid #eee;
+}
+.brandCon .ul .li .img{
+  display: inline-block;
+  vertical-align: middle;
+}
+.brandCon .ul .li text{
+  display: inline-block;
+}
+.brandCon .ul .li .img image{
+  width: 2.3em;
+  height: 2.3em;
+}
+
+.Letter{
+  position: fixed;
+  right: 2%;
+  font-size:0.6em ;
+  top: 50%;
+  transform: translate(0,-50%);
+  text-align: center;
+  width: 2em;
+  color: #76919c
+}
+
+.cias{
+  position: absolute;
+  top: 10%;
+  left: -22%;
+  width: 12em;
+  height: 2em;
+  background-color: rgba(255, 136, 0, 0.671);
+  transform: rotate(-45deg);
+  font-size: 0.65em;
+  color: #fff;
+  line-height: 2em;
+  text-align: center;
+}
