--- a/pages/camera/camera.wxss
+++ b/pages/camera/camera.wxss
@@ -1,6 +1,6 @@
 /* pages/camera/camera.wxss */
 .cameraTitle{
-  margin:5em 0 0
+  margin:1em 0 0
 }
 .camera{
   padding: 0 1.5em;
@@ -18,11 +18,12 @@
   margin: 1.5em 0;
 }
 swiper{
-  height: 60vh;
+  height: 70vh;
+  border-radius: 0.3em 2em 2em 0.3em;
 }
 .cameraPic image{
   width: 100%;
-  height: 60vh;
+  height: 70vh;
   border-radius: 0.3em 2em 2em 0.3em;
   box-shadow: 0 0 1em #b8b2b6;
 }
