--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -390,3 +390,31 @@
         </view>
   </view>
 </view>
+
+
+
+
+
+<!-- 微信授权 -->
+<!-- 添加车辆 -->
+<view class="zan-dialog shouquan_wrap {{ shouquan ? 'zan-dialog--show' : '' }}">
+  <view class="zan-dialog__mask" bindtap="toggleshouquan" />
+  <view class="zan-dialog__container">
+    <view class='choose'>
+    <view class="chooseContent">
+
+        <view class="shouquan_con">
+            <image src="/assets/images/logo/logo.png" mode="aspectFill"></image>
+            <view class="shouquan_text">
+                <view class="shouquan_h3">欢迎登录引擎公园~</view>
+                <view class="shouquan_p">登录后可消费获取引擎币，用于兑换和抽奖，享受更好的服务体验</view>
+            </view>
+            <view class="shouquan_btn">微信一键登录</view>
+            <view class="shouquan_Privacy">点击登录引擎公园,即表示已阅读并同意<navigator>《引擎公园隐私条款》</navigator><navigator>《用户服务须知》</navigator></view>
+        </view>
+
+    </view>
+
+</view>
+  </view>
+</view>
