--- a/pages/rentalshow/rentalshow.wxss
+++ b/pages/rentalshow/rentalshow.wxss
@@ -214,7 +214,7 @@ page{
 }
 
 .rentalshow{
-  margin-bottom: 5em;
+  margin-bottom: 8em;
 }
 
 .total{
@@ -255,4 +255,55 @@ page{
 .moneylistPrice{
   color: #fd5001;
 }
+
+.increment .jsr_item{
+  display: inline-block;
+  font-size: 0.9em;
+  width: 33%;
+}
+.increment .jsr_item text{
+  color: #ffc21b;
+}
+.increment .jsr_item.btn{
+  text-align: center;
+  background-color: #ffc21b;
+  padding: 0.5em 0;
+  border-radius: 0.2em;
+}
+
+.new_add navigator{
+  background-color: #fff;
+  color: #ffc21b;
+  text-align: center;
+  padding: 0.5em 0;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.jsr_info{
+  font-size: 0.85em;
+  width: 90%;
+  display: inline-block;
+  vertical-align: middle;
+}
+.jsr_info .name{
+  margin: 0.5em 0;
+  font-size: 1.2em;
+}
+.jrs_radio{
+  display: inline-block;
+  width: 5%;
+  vertical-align: middle;
+}
+.jsr_model .ul{
+  background-color: #fff;
+  padding: 1em;
+}
+
+
+
+
+
+
+
+
 
