--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -39,6 +39,10 @@
 }
 .banner image{
   width: 100%;
+  min-height: 100%;
+}
+.banner swiper{
+  height: 30vh;
 }
 
 .tab{
@@ -125,9 +129,12 @@
   position: relative;
   width: 33.33%;
 }
+.tabContent .tabCon-item navigator {
+  height: 100%;
+}
 .tabContent .tabCon-item image{
   width: 100%;
-  height: 10em;
+  height: 30vh;
   display: block;
 }
 
