--- a/pages/carlist/carlist.wxml
+++ b/pages/carlist/carlist.wxml
@@ -356,49 +356,49 @@
             <view class="ul">
                 <view class="li on">
                     <view class="ico">
-                        <image src="../../images/jc.png" mode="aspectFill"></image>
+                        <image src="/assets/images/ico/jc.png" mode="aspectFill"></image>
                     </view>
                     <view class="text">轿车</view>
                 </view>
                 <view class="li">
                     <view class="ico">
-                        <image src="../../images/suv.png" mode="aspectFill"></image>
+                        <image src="/assets/images/ico/suv.png" mode="aspectFill"></image>
                     </view>
                     <view class="text">SUV</view>
                 </view>
                 <view class="li">
                     <view class="ico">
-                        <image src="../../images/mpv.png" mode="aspectFill"></image>
+                        <image src="/assets/images/ico/mpv.png" mode="aspectFill"></image>
                     </view>
                     <view class="text">MPV</view>
                 </view>
                 <view class="li">
                     <view class="ico">
-                        <image src="../../images/pc.png" mode="aspectFill"></image>
+                        <image src="/assets/images/ico/pc.png" mode="aspectFill"></image>
                     </view>
                     <view class="text">跑车</view>
                 </view>
                 <view class="li">
                     <view class="ico">
-                        <image src="../../images/pk.png" mode="aspectFill"></image>
+                        <image src="/assets/images/ico/pk.png" mode="aspectFill"></image>
                     </view>
                     <view class="text">皮卡</view>
                 </view>
                 <view class="li">
                     <view class="ico">
-                        <image src="../../images/wm.png" mode="aspectFill"></image>
+                        <image src="/assets/images/ico/wm.png" mode="aspectFill"></image>
                     </view>
                     <view class="text">微面</view>
                 </view>
                 <view class="li">
                     <view class="ico">
-                        <image src="../../images/wk.png" mode="aspectFill"></image>
+                        <image src="/assets/images/ico/wk.png" mode="aspectFill"></image>
                     </view>
                     <view class="text">微卡</view>
                 </view>
                 <view class="li">
                     <view class="ico">
-                        <image src="../../images/qk.png" mode="aspectFill"></image>
+                        <image src="/assets/images/ico/qk.png" mode="aspectFill"></image>
                     </view>
                     <view class="text">轻客</view>
                 </view>
@@ -636,4 +636,9 @@
     </view>
 
 </view>
+
+
+
+
+
 
